ola-parser/src/testdata/syntaxTests/nameAndTypeResolution/157_array_of_undeclared_type.sol
contract c {
    a[] foo;
}
// ----
// DeclarationError 7920: (17-18): Identifier not found or not unique.
